add run metadata to sessions
